Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-deploy-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice-3
spec:
  selector:
    matchLabels:
      app: productcatalogservice-3
  template:
    metadata:
      labels:
        app: productcatalogservice-3
    spec:
      containers:
      - env:
        - name: PORT
          value: '32537'
        - name: DISABLE_PROFILER
          value: '1'
        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:32537
        name: server
        ports:
        - containerPort: 32537
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:32537
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
