Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-svc-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-1
spec:
  ports:
  - name: grpc
    port: 23628
    targetPort: 23628
  selector:
    app: productcatalogservice-1
  type: ClusterIP
