Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-1-recommendationservice-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-1-allow-recommendationservice-1
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice-1
    ports:
    - port: 23628
  podSelector:
    matchLabels:
      app: productcatalogservice-1
