Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-3-frontend-15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-3-allow-frontend-15
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-15
    ports:
    - port: 53333
  podSelector:
    matchLabels:
      app: productcatalogservice-3
