Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-3-frontend-5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-3-allow-frontend-5
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-5
    ports:
    - port: 32537
  podSelector:
    matchLabels:
      app: productcatalogservice-3
