Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-4-checkoutservice-10.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-4-allow-checkoutservice-0
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-0
    ports:
    - port: 47089
  podSelector:
    matchLabels:
      app: productcatalogservice-4
