Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-5-recommendationservice-5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-5-allow-recommendationservice-5
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: recommendationservice-5
    ports:
    - port: 49178
  podSelector:
    matchLabels:
      app: productcatalogservice-5
