Replication Framework/services_creators/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-6-checkoutservice-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-6-allow-checkoutservice-2
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-2
    ports:
    - port: 18457
  podSelector:
    matchLabels:
      app: productcatalogservice-6
